# Proyecto_Telematica

./: .gitignore  README.md  client  server
logs/: log.txt
src/: client.cpp  server.cpp
webserver/: CMakeLists.txt  index.html  server.cpp
webserver/src/: http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_server.cpp  http_server.hpp  main.cpp
webserver/www/: index.html
www/caso1_imagen/: index.html
www/caso2_video/: index.html
www/caso3_multi/: index.html  script.js  style.css
www/caso4_1mb/: archivo_grande.txt
www/caso5_formulario/: index.html
